--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -193,6 +193,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="GlobalClass.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="SmokeEffect.h">
       <SubType>
       </SubType>
@@ -291,6 +295,10 @@
     </ClCompile>
     <ClCompile Include="FadeEffect.cpp" />
     <ClCompile Include="FireWorkEffect.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="GlobalClass.cpp">
       <SubType>
       </SubType>
     </ClCompile>
