--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -164,6 +164,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BackGroundRenderer.h" />
+    <ClInclude Include="BgmSpeed.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="BlackScreen.h">
       <SubType>
       </SubType>
@@ -266,6 +270,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BackGroundRenderer.cpp" />
+    <ClCompile Include="BgmSpeed.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="BlackScreen.cpp">
       <SubType>
       </SubType>
