--- a/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="BackGroundRenderer.h">
       <Filter>PostEffect</Filter>
     </ClInclude>
+    <ClInclude Include="BgmSpeed.h">
+      <Filter>Levels\PlayLevel\Obj</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DFICore.cpp" />
@@ -154,6 +157,9 @@
     <ClCompile Include="GlobalValue.cpp" />
     <ClCompile Include="BackGroundRenderer.cpp">
       <Filter>PostEffect</Filter>
+    </ClCompile>
+    <ClCompile Include="BgmSpeed.cpp">
+      <Filter>Levels\PlayLevel\Obj</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
